finished the header section

--- a/styles/architects.css
+++ b/styles/architects.css
@@ -2,6 +2,17 @@ header{
     background: rgba(255, 144, 14, 0.10);
     padding:50px 240px;
 }
+.btn-primary{
+    border-radius: 8px;
+    background: #FF900E;
+    font-size: 1.25rem;
+    font-weight: 600;
+    padding: 20px 25px;
+    color: #FFF;
+    cursor: pointer;
+    border: 0;
+
+}
 nav{
     display: flex;
     justify-content: space-between;
@@ -44,4 +55,28 @@ nav li a{
 .img-banner{
     max-width: 1440px;
     margin: 0 auto;
+}
+.banner img{
+    margin-top: 20px;
+    width: 100%;
+}
+
+
+
+@media screen and (max-width:576px){
+    header{
+        padding: 20px;
+    }
+    nav ul{
+        flex-direction: column;
+    }
+}
+@media screen and (min-width:577px) and (max-width:960px){
+    header{
+        padding: 40px;
+    }
+    nav{
+        flex-direction: column;
+
+    }
 }
