features content added

--- a/styles/architects.css
+++ b/styles/architects.css
@@ -80,3 +80,35 @@ nav li a{
 
     }
 }
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+.teams-container{
+    display: flex;
+    align-items: center;
+}
+.teams-img-container{
+    display: grid;
+    grid-template-columns: repeat(2 ,1fr);
+    gap: 1.5rem;
+}
+.teams-content{
+    padding-left: 70px;
+    padding-right: 70px;
+}
+.teams-title{
+    font-size: 2.8rem;
+}
+.teams-title .quick-list{
+    color: #727272;
+font-family: Work Sans;
+font-size: 45px;
+font-weight: 500;
+}
+.teams-title .text-features{
+    color: #FF900E;
+font-family: Work Sans;
+font-size: 45px;
+font-weight: 700;
+}
