--- a/styles/architects.css
+++ b/styles/architects.css
@@ -2,6 +2,10 @@ header{
     background: rgba(255, 144, 14, 0.10);
     padding:50px 240px;
 }
+.text-light-gray{
+    font-size: 16px;
+     color: #727272;
+}
 .btn-primary{
     border-radius: 8px;
     background: #FF900E;
@@ -48,41 +52,19 @@ nav li a{
     margin: 0 auto;
     color: #131313;
 }
-.banner-description{
-    font-size: 16px;
-     color: #727272;
-}
+
 .img-banner{
     max-width: 1440px;
-    margin: 0 auto;
+    margin: 70px auto;
 }
 .banner img{
     margin-top: 20px;
     width: 100%;
 }
-
-
-
-@media screen and (max-width:576px){
-    header{
-        padding: 20px;
-    }
-    nav ul{
-        flex-direction: column;
-    }
-}
-@media screen and (min-width:577px) and (max-width:960px){
-    header{
-        padding: 40px;
-    }
-    nav{
-        flex-direction: column;
-
-    }
-}
 main{
     max-width: 1440px;
-    margin: 0 auto;
+    margin: 70px auto;
+    padding-left: 290px;
 }
 .teams-container{
     display: flex;
@@ -111,4 +93,36 @@ font-weight: 500;
 font-family: Work Sans;
 font-size: 45px;
 font-weight: 700;
+}
+
+
+
+
+
+@media screen and (max-width:576px){
+    header{
+        padding: 20px;
+    }
+    nav ,
+    .teams-container
+    {
+        flex-direction: column;
+    }
+    .teams-img-container{
+        grid-template-columns: 1fr;
+    }
+    .teams-content{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+}
+@media screen and (min-width:577px) and (max-width:960px){
+    header{
+        padding: 40px;
+    }
+    nav , .teams-container
+    {
+        flex-direction: column;
+
+    }
 }
