--- a/styles/architects.css
+++ b/styles/architects.css
@@ -6,6 +6,12 @@ header{
     font-size: 16px;
      color: #727272;
 }
+.section-title{
+    color: #131313;
+    font-size: 2.3rem;
+    font-weight: 700;
+    font-family: Work Sans;
+}
 .btn-primary{
     border-radius: 8px;
     background: #FF900E;
@@ -22,12 +28,7 @@ nav{
     justify-content: space-between;
     align-items: center;
 }
-.nav-title{
-    color: #131313;
-    font-size: 2.3rem;
-    font-weight: 700;
-    font-family: Work Sans;
-}
+
 nav > ul{
     display: flex;
 }
