--- a/styles/architects.css
+++ b/styles/architects.css
@@ -95,9 +95,44 @@ font-family: Work Sans;
 font-size: 45px;
 font-weight: 700;
 }
-
-
-
+.facts-card-container{
+    display: flex;
+    justify-content: space-around;
+}
+.facts-card-container .card{
+    border-radius: 8px;
+border: 1px solid #FF900E;
+text-align: center;
+padding: 30px;
+}
+.facts-card-container .card-stats{
+    color:#424242;
+font-family: Work Sans;
+font-size: 2.8rem;
+font-weight: 600;
+margin-top: 10px;
+margin-bottom: 10px;
+}
+.facts-card-container .card-title{
+    color:#727272;
+font-family: Work Sans;
+font-size: 20px;
+font-weight: 600;
+margin-top: 5px;
+}
+.Sponsors{
+    text-align: center;
+}
+.sponsors-img-container{
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap:20px;
+}
+.sponsors-img-container img{
+    width: 165px;
+}
 
 
 @media screen and (max-width:576px){
@@ -105,25 +140,31 @@ font-weight: 700;
         padding: 20px;
     }
     nav ,
-    .teams-container
+    .teams-container,
+    .facts-card-container,
+    .sponsors-img-container
     {
         flex-direction: column;
     }
     .teams-img-container{
         grid-template-columns: 1fr;
     }
-    .teams-content{
+    .teams-content ,.facts-card-container{
         padding-left: 20px;
         padding-right: 20px;
+    }
+    .facts-card-container{
+        gap: 20px;
     }
 }
 @media screen and (min-width:577px) and (max-width:960px){
     header{
         padding: 40px;
     }
-    nav , .teams-container
+    nav , 
+    .teams-container,
+    .sponsors-img-container
     {
         flex-direction: column;
-
     }
 }
