--- a/styles/architects.css
+++ b/styles/architects.css
@@ -95,6 +95,44 @@ font-family: Work Sans;
 font-size: 45px;
 font-weight: 700;
 }
+.features{
+    margin-top: 130px;
+    display: flex;
+    gap:100px;
+}
+.features .section-title{
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+}
+.featuers-content .card{
+    padding: 30px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+background: #FFF;
+box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+}
+.ten-years-badge{
+    border-radius: 8px;
+background: #FF900E;
+color: #FFF;
+font-family: Work Sans;
+width: 342px;
+padding: 40px;
+text-align: center;
+position: relative;
+bottom: 100px;
+}
+.features-images img{
+    height: 100%;
+    margin-left: 80px;
+}
+.ten-years-badge h2{
+    font-size: 4rem;
+    margin-top: 0;
+}
+.ten-years-badge p{
+    font-size: 1.5rem;
+} 
 .facts-card-container{
     display: flex;
     justify-content: space-around;
@@ -133,18 +171,36 @@ margin-top: 5px;
 .sponsors-img-container img{
     width: 165px;
 }
+.footer-section{
+    border-radius: 8px;
+background: #FFF4E7;
+width: 1440px;
+height: 100px;
+text-align: center;
+align-items: center;
+margin-left: 300px;
+}
 
 
 @media screen and (max-width:576px){
     header{
         padding: 20px;
     }
-    nav ,
+    nav , 
+    .features,
     .teams-container,
     .facts-card-container,
     .sponsors-img-container
     {
         flex-direction: column;
+    }
+    .features-images img{
+        width: 90%;
+        margin-left: 0;
+    }
+    .ten-years-badge{
+        position: static;
+        max-width: 300px;
     }
     .teams-img-container{
         grid-template-columns: 1fr;
@@ -162,6 +218,7 @@ margin-top: 5px;
         padding: 40px;
     }
     nav , 
+    .features,
     .teams-container,
     .sponsors-img-container
     {
